<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/first_card"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      app:cardElevation="4dp"
      app:contentPadding="@dimen/dp_8"
      app:layout_constraintEnd_toStartOf="@+id/guideline2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

      <ImageView
          android:id="@+id/imageView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:contentDescription="@string/teacher_icon"
          android:src="@drawable/teach_icon"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/teacher"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/imageView"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView3"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginTop="4dp"
          android:text="@string/_50"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/textView2"
          app:layout_constraintStart_toStartOf="@+id/textView2"
          app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.card.MaterialCardView>


  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="219dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintGuide_percent="0.5" />

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/cardView2"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="8dp"
      app:cardElevation="4dp"
      app:contentPadding="@dimen/dp_8"
      app:layout_constraintBottom_toBottomOf="@+id/first_card"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toTopOf="@+id/first_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:id="@+id/imageView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:contentDescription="@string/student_icon"
          android:src="@drawable/students_icon"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/students"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/imageView3"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="4dp"
          android:layout_marginTop="4dp"
          android:text="@string/_200"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1"
          android:textStyle="normal|bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/textView4"
          app:layout_constraintStart_toStartOf="@+id/textView4"
          app:layout_constraintTop_toBottomOf="@+id/textView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/materialCardView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:cardElevation="4dp"
      app:contentPadding="@dimen/dp_8"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/first_card"
      app:layout_constraintStart_toStartOf="@+id/first_card"
      app:layout_constraintTop_toBottomOf="@+id/first_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:id="@+id/imageView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:contentDescription="@string/classes_icon"
          android:src="@drawable/classes_icon"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/classes"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/imageView4"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="4dp"
          android:layout_marginTop="4dp"
          android:text="@string/_1000"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="@+id/textView6"
          app:layout_constraintTop_toBottomOf="@+id/textView6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.card.MaterialCardView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:cardElevation="4dp"
      app:contentPadding="@dimen/dp_8"
      app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
      app:layout_constraintEnd_toEndOf="@+id/cardView2"
      app:layout_constraintStart_toStartOf="@+id/cardView2"
      app:layout_constraintTop_toTopOf="@+id/materialCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:id="@+id/imageView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:contentDescription="@string/assign_icon"
          android:src="@drawable/assignments_icon"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView8"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/assignment"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/imageView5"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView9"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginTop="4dp"
          android:text="20000"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="@+id/textView8"
          app:layout_constraintTop_toBottomOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>