<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.TestPage">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/tv_testQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="TextView"
            android:textColor="@color/secondColor"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcyl_testOptions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        tools:listitem="@layout/option" />

    <TextView
        android:id="@+id/tv_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/previous"
        android:textColor="@color/secondColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        android:textColor="@color/secondColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fiinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_fiinish" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="250dp"
        android:background="@color/secondColor"
        android:backgroundTint="@color/secondColor"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paging_rcly" />

    <TextView
        android:id="@+id/tv_fiinish"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/finish"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_previous"
        app:layout_constraintEnd_toStartOf="@+id/tv_next"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/tv_previous"
        app:layout_constraintTop_toTopOf="@+id/tv_previous"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paging_rcly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/tv_hr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/question_count_item" />

<!--    <view-->
<!--        android:id="@+id/timeBG_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="4dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/paging_rcly"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/paging_rcly"-->
<!--        app:layout_constraintTop_toTopOf="@id/paging_rcly">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

            <TextView
                android:id="@+id/tv_hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="@id/paging_rcly"
                app:layout_constraintEnd_toStartOf="@+id/tv_minutes"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_minutes"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_hr"
                app:layout_constraintEnd_toStartOf="@+id/tv_seconds"
                app:layout_constraintTop_toTopOf="@+id/tv_hr"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_seconds"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_minutes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_minutes" />
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    </view>-->
</androidx.constraintlayout.widget.ConstraintLayout>